# integration-platform

./: .funcignore  .gitignore  dw_RecentBuyers.csv  function_app.py  pyproject.toml  readme.md  requirements.txt
config/: settings.py
connectors/: __init__.py  acu_api.py  aftership.py  hubspot_api.py  redstag_api.py  rmi_xml.py  sftp.py  sql.py
dags/: create_acu_receipts.py  get_from_rmi.py  send_to_rmi.py
load/: address_validator.py  kustomer.py  load_redstag_send.py  shipment_api.py
pipelines/: __init__.py  acu_deletions.py  acu_to_dbc_customers.py  acu_to_dbc_phone_revenue.py  acu_to_dbc_shipments.py  aftership_update.py  base.py  cosignment_reclassification.py  create_acu_shipment.py  darwill_addresses.py  five9_call_segments.py  get_rmas_from_RMI.py  hubspot_company_revenue.py  hubspot_contacts.py  hubspot_property_update.py  hubspot_snapshot.py  pack_shipments.py  redstag_order_search.py  rmi_link_to_acu.py  sales_order_cleaner.py
scripts/: _mfr_sandbox.py  acu_api_executions.py  connector_executions.py  create_table_cleaner.py  cron_calendar.py  db_table_config_generator.py  db_table_config_generator_multiple.py  generate_azure_env_vars.py  mark_sent_to_wh.py  query_acu_api.py  run_acu_deletions.py  run_acu_to_dbc_all.py  run_acu_to_dbc_b2b_collections.py  run_acu_to_dbc_backorders_pit.py  run_acu_to_dbc_customers.py  run_acu_to_dbc_inventory_summary.py  run_acu_to_dbc_phone_revenue.py  run_acu_to_dbc_quotes.py  run_acu_to_dbc_sales_orders.py  run_acu_to_dbc_shipments.py  run_acu_to_dbc_trial_balance.py  run_address_validator.py  run_aftership_send.py  (+41 more)
(+245 files in other folders)
