[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "integration-platform"
version = "1.2.1"
requires-python = ">=3.11"
dependencies = [
    "colorlog>=6.10.1",
    "pandas>=3.0.1",
    "polars>=1.37.1",
    "pyarrow>=23.0.0",
    "pymssql>=2.3.13",
    "python-dotenv>=1.2.2",
    "Requests>=2.33.1",
    "SQLAlchemy>=2.0.49",
    "xmltodict>=1.0.4",
    "paramiko>=5.0.0",
    "openpyxl>=3.1.5",
]

[tool.setuptools.packages.find]
include = ["integration_platform"]

[tool.setuptools.package-data]
integration_platform = ["sql/**/*.sql"]